index.css
body {
  font-family: sans-serif;
  height: 100%;
}

html {
  height: 100%;
}

#app {
  position: relative;
  min-height: 100%;
}

#main-app {
  padding-bottom: 9em;
  position: absolute;
  min-height: 100%;
  width: 100%;
}

a {
  text-decoration: none;
}

label {
  display: block;
}

nav a {
  display: inline-block;
  margin: 1em;
  color: white;
}

form div {
  margin: 1em;
  display: inline-block;
}

.nav-container {
  position: fixed;
  top: 0;
  width: 100vw;
  z-index: 2;
  background-color: black;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 120%;
  height: 60px;
  font-family: Palantino;
}

.loggedout-nav-item {
  margin-right: 1em;
}

footer {
  background-color: #bfb9b9;
  padding: 1em 0;
  border-top: .15em solid black;
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 1rem;
  text-align: center;
  height: 9em;
}

.footer-left {
  text-align: center;
}

.footer-middle {
  border-left: .15em solid black;
  border-right: .15em solid black;
  text-align: center;
}

.footer-middle h2 {
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  font-weight: bold;
}

.footer-middle h4 {
  font-family: cursive, Times, 'Times New Roman', serif;
}

.footer-right {
  text-align: center;
}

.home {
  margin-left: 2em;
}

#player-icon {
  height: 2em;
  width: 2em;
  background-color: white;
}

#player-profile {
  display: flex;
  align-items: center;
}

#logout-link {
  margin-right: 2em;
}

.loggedin-nav-items {
  display: flex;
  align-items: center;
}

.auth-button-container {
  color: white;
  display: flex;
  justify-content: space-between;
}

.google-button {
  margin: 0.5em 0em 0.5em 3em;
}

.facebook-button {
  margin: 0.5em 17em 0.5em 0;
}
.name-input-container {
  display: flex;
  margin-bottom: -1em;
}

.name-input input{
  width: 20em;
}

.signup-fields {
  display: block;
  width: 20em;
  margin-left: 2em;
}

.signup-fields input{
  width: 42em;
}

.login-fields {
  display: block;
  width: 20em;
}

.login-fields input{
  width: 42em;
}

.auth-form {
  display: block;
  margin: 0 auto;
  width: 55em;
  font-size: 22px;
}

#signup-button {
  display: flex;
  margin-left: 2em;
  margin-top: 2em;
}

#player-info-form {
  display: block;
  margin: 0 auto;
  width: 55em;
  font-size: 22px;
}

#player-info-form h3{
  margin: -.5em 0em 0em .7em;
}

#player-info-submit {
  display: flex;
  margin-left: 2em;
  margin-top: 2em;
}

.player-image {
  height: 10em;
  width: 10em;
}

.landing-pres-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 0;
  margin-bottom: -1em;
}

#landing-container {
  position: relative;
  top: 0;
  margin-top: 0;
}

#landing-main-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: 1;
  position: relative;
}
.landing-pres-container h1 {
  margin-top: .5em;
  font-weight: bolder;
  color: yellow;
}

#landing-content {
  margin: 1em 0 2em 0;
}

.landing-text {
  border: .1em solid black;
  background-color: rgb(247, 236, 217);
  font-size: 18px;
  text-align: justify;
  padding: .5em;
  width: 80vw;
}

.landing-text-end {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
}

.landing-toggle-text {
  height: 40px;
  margin-left: 1em;
  white-space: nowrap;
}

#login-signup-container {
  border: .4em gray;
  border-style: double;
  margin-bottom: 1em;
  width: 40em;
  text-align: center;
  background-color:  white;
}

#login-signup-buttons {
  display: flex;
  justify-content: space-evenly;
  margin-bottom: .5em;
  padding-bottom: 2em;
}

.landing-login-button {
  background-color: rgb(69, 110, 171);
  color: white;
  width: 7.5em;
}

.landing-signup-button {
  background-color: rgb(115, 180, 118);
  color: white;
  width: 7.5em;
}

#login-signup-container h2 {
  padding-top: 1em;
  font-weight: bold;
  margin-bottom: .5em;
}

#join-signup-container h2 {
  padding-top: 1em;
  font-weight: bold;
  margin-bottom: .5em;
}

#landing-game-container {
  margin: 1em;
  border: .15em solid black;
  background-color:  rgb(247, 236, 217);
  position: relative;
}

#landing-game-content {
 border: .5em solid rgb(247, 236, 217);
}

.centered-gametype {
  position: absolute;
  text-align: center;
  top: 91.5%;
  left: 50%;
  width: 90%;
  transform: translate(-50%, -50%);
  color: yellow;
  font-size: 2vw;
}

#landing-gametype-container {
  display: flex;
}

.landing-gametype-image {
  width: 100%;
  height: 100%;
 }

.center-container {
  display: flex;
  justify-content: center;
 }

 .play-button {
  background-color: rgb(126, 226, 233);
  font-weight: bold;
  width: 7.5em;
 }

.play-button:hover {
  background-color: rgb(109, 198, 204);
  font-weight: bold;
  width: 7.5em;
 }

.loading-pres-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 80vw;
}

.loading-content-container {
  margin: 1em;
  border: .15em solid black;
  background-color:  rgb(247, 236, 217);
  width: 75vw;
}

.game-container {
  display: flex;
}

.gameplay-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 80vw;
}

.results-container {
  width: 80vw;
}

.results-pres-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.player-sidebar {
  display: flex;
  flex-direction: column;
  border-top: .15em solid black;
  border-left: .15em solid black;
  border-right: .15em solid black;
  background-color:  rgb(202, 199, 190);
  min-height: 100vh;
  width: 20vw;
}

.individual-player-container {
  display: flex;
  justify-content: flex-start;
  margin: 0em .25em .25em .25em;
  background-color: rgb(247, 236, 217);
}

.individual-player-pres-container {
  border: .15em solid black;
  margin: 1em;
  background-color: #f7ecd9;
  box-shadow: 10px 5px 5px #4b4545;
}

.your-individual-player-pres-container {
  border: .3em double #b42222;
  border-style: double solid solid double;
  margin: 1em;
  background-color: #f7ecd9;
  box-shadow: 10px 5px 5px #af3f3f;
}

.individual-player-name {
  display: flex;
  justify-content: center;
  margin: .2em .2em 0em .2em;
}

.individual-player-name h4 {
  margin-bottom: .1em;
  text-decoration: underline;
  font-weight: 500;
  font-size: 1.5em;
}

.your-individual-player-pres-container .individual-player-name h4 {
  margin-bottom: .1em;
  text-decoration: underline;
  font-weight: 300;
  font-size: 1.5em;
  color: #af3f3f;
}

.individual-player-image {
  margin: 0 .1em .1em .1em;
  border: .15em solid black;
  background-color:  white;
  height: 4em;
  width: 4em;
}

.individual-player-image img {
  height: 100%;
  width: 100%;
}

.individual-player-score {
  display: flex;
  align-items: center;
  flex-grow: 10;
  margin: .2em;
}

.individual-player-score h4 {
  font-weight: 250;
  font-size: 1.5em;
}

.gameplay-logo {
  margin: .5em;
}

.gameboard-question {
  margin: 0em 5em 1em 5em;
  font-family: Palantino;
}

.gameboard-answer-grid {
  margin-bottom: 3em;
}

.gameboard-answer-buttons {
  width: 15em;
}

.gameboard-answer-col {
  margin-bottom: 6.1em;
}

.gameboard-answer-row {
  margin: 0em 9.7em 0em 9.05em;
}

.gameboard-answer-margin {
  margin: 0em 6em;
}

.answer-waiting-message {
  margin-top: -1em;
}

#player-correct {
  color: #159b4b97;
  font-weight: bold;
}

#player-incorrect {
  color: #c61725c9;
  font-weight: bold;
}

.space-below-header {
  margin-top: 60px;
}

#landing-background-image {
  opacity: .80;
  width: 100vw;
  height: 100vh;
  position: fixed;
}

#scoringtimer {
  width: 20em;
  height: 10em;
  margin: 0em 2em 2em 2em;
}

#countdown-timer {
  position: absolute;
  margin: 4em 0em 0em 7em;
  text-align: center;
}

#countdown-timer p {
  width: 5em;
  display: inline-block;
  font-size: 2em;
}

#baseball-card-collage {
  width: 100vw;
  height: 10vh;
}

#player-statistics {
  color: white;
}

.coming-soon-tooltip {
  color: black;
}

#license-link {
  color: white;
}

.landing-divider {
  width: 27%;
  margin: 1em 0em;
  opacity: .7;
}

